Fix some layout bugs

--- a/css/common.styl
+++ b/css/common.styl
@@ -6,7 +6,6 @@ body
 #site-container
   margin: 0 auto
   width: 1200px
-  overflow: hidden
   
 .zooniverse-footer
   clear: both
